@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: main.c,v 1.640.2.23.2.57.2.9 2008/02/15 14:51:39 pajoye Exp $ */
+/* $Id: main.c,v 1.640.2.23.2.57.2.10 2008/02/23 17:06:22 helly Exp $ */
 
 /* {{{ includes
  */
@@ -843,6 +843,7 @@ static void php_error_cb(int type, const char *error_filename, const uint error_
 				/* fatal errors are real errors and cannot be made exceptions */
 				break;
 			case E_STRICT:
+			case E_DEPRECATED:
 				/* for the sake of BC to old damaged code */
 				break;
 			case E_NOTICE:
@@ -891,6 +892,9 @@ static void php_error_cb(int type, const char *error_filename, const uint error_
 				break;
 			case E_STRICT:
 				error_type_str = "Strict Standards";
+				break;
+			case E_DEPRECATED:
+				error_type_str = "Deprecated";
 				break;
 			default:
 				error_type_str = "Unknown error";
