@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 20??, PHP 5.3.0
+- Add new error mode E_DEPRECATED that informs about stuff that gets dropped in
+  later PHP versions. (Lars Strojny, Felipe, Marcus)
 - Added and improved PHP syntax and semantics:
   . Added NOWDOC. (Gwynne Raskind, Stas, Dmitry)
   . Added "?:" operator. (Marcus)
